--- a/electronics.html
+++ b/electronics.html
@@ -325,16 +325,16 @@
                         </div>
                         <div class="col-lg-4 col-md-6 col-sm-6">
                             <div class="product__item">
-                                <div class="product__item__pic set-bg" data-setbg="img/electronics/airpods.jpg">
+                                <div class="product__item__pic set-bg" id="product-image" data-setbg="img/electronics/airpods.jpg">
                                     <ul class="product__item__pic__hover">
                                         <li><a href="#"><i class="fa fa-heart"></i></a></li>
                                         <li><a href="#"><i class="fa fa-retweet"></i></a></li>
-                                        <li><a href="#"><i class="fa fa-shopping-cart"></i></a></li>
+                                        <li><a href="#" onclick="incrementAndAddToCart()"><i class="fa fa-shopping-cart"></i></a></li>
                                     </ul>
                                 </div>
                                 <div class="product__item__text">
-                                    <h6><a href="#">Apple Airpods</a></h6>
-                                    <h5>$200.00</h5>
+                                    <h6><a href="#" id="product-name">Apple Airpods</a></h6>
+                                    <h5 id="product-price">$200.00</h5>
                                 </div>
                             </div>
                         </div>
@@ -473,7 +473,12 @@
     <script src="js/main.js"></script>
     <script type="text/javascript" src="js/quickCart.js"></script>
 
-
+    <script>
+        function incrementAndAddToCart() {
+            incrementItem(document.getElementById('product-name').innerText, document.getElementById('product-price').innerText, document.getElementById('product-image').dataset.setbg);
+            addToCart();
+        }
+    </script>
 
 </body>
 
