--- a/contact.html
+++ b/contact.html
@@ -179,7 +179,7 @@
                     </div>
                     <div class="col-lg-12 text-center">
                         <textarea placeholder="Your Message"></textarea>
-                        <button type="submit" class="site-btn">SEND MESSAGE</button>
+                        <button type="submit" onclick="sendMessage()" class="site-btn">SEND MESSAGE</button>
                     </div>
                 </div>
             </form>
